@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2015, 2018, Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 2015, 2020, Oracle and/or its affiliates. All rights reserved.
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
 #
 # This code is free software; you can redistribute it and/or modify it
@@ -46,16 +46,12 @@ BIT_FLAG=""
 # set platform-dependent variables
 OS=`uname -s`
 case "$OS" in
-  AIX | Darwin | Linux | SunOS )
+  AIX | Darwin | Linux )
     NULL=/dev/null
     PS=":"
     FS="/"
-    ## for solaris, linux it's HOME
+    ## for linux it's HOME
     FILE_LOCATION=$HOME
-    if [ -f ${FILE_LOCATION}${FS}JDK64BIT -a ${OS} = "SunOS" ]
-    then
-        BIT_FLAG=`cat ${FILE_LOCATION}${FS}JDK64BIT`
-    fi
     ;;
   Windows_* | CYGWIN* )
     NULL=NUL
@@ -75,7 +71,7 @@ THIS_DIR=`pwd`
 
 ${TESTJAVA}${FS}bin${FS}java ${BIT_FLAG} -version
 
-${TESTJAVA}${FS}bin${FS}java ${BIT_FLAG} FontFile > test.out 2>&1
+${TESTJAVA}${FS}bin${FS}java -Djava.security.manager=allow ${BIT_FLAG} FontFile > test.out 2>&1
 
 STATUS=$?
 
